# d3d12-async-reprojection

./: .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  LEAN_LOWLATENCY.md  LICENSE  MASTER_HANDOFF.md  README.md  analyze_telemetry.ps1
.github/workflows/: build.yml
consumer/: CMakeLists.txt  main.cpp
src/capture/: depth_capture.cpp  depth_capture.h  ffx_defs.h
src/common/: logger.cpp  logger.h  telemetry.cpp  telemetry.h
src/export/: export_manager.cpp  export_manager.h
src/hooks/: hook_manager.cpp  hook_manager.h  rt_tracker.cpp  rt_tracker.h  upscaler_defs.h
src/input/: mouse_tracker.cpp  mouse_tracker.h
src/ipc/: shared_metadata.h
src/overlay/: overlay.cpp  overlay.h
src/present/: presenter.cpp  presenter.h
src/proxy/: dxgi.def  dxgi_proxy.cpp  dxgi_proxy.h
src/swapchain/: proxy_swapchain.cpp  proxy_swapchain.h
src/tracker/: resource_tracker.cpp  resource_tracker.h
src/warp/: warp_renderer.cpp  warp_renderer.h
